--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "hello-node",
+  "name": "wd-201-level-2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" :  "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "index.js"
   },
-  "author": "",
+  "author": "Pooja",
   "license": "ISC"
 }
